Closed Bug 1736761 Opened 4 years ago Closed 4 years ago

EGL/X11/Nvidia 470.74: "MESA-LOADER: failed to open nouveau" (likely a Gbm/Dmabuf warning because it's not driver 495)

Categories

(Core :: Widget: Gtk, defect)

Firefox 95
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox95 --- disabled
firefox96 --- fixed

People

(Reporter: ausaitis, Assigned: rmader)

References

(Blocks 1 open bug)

Details

(Whiteboard: QA-not-reproducible)

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:95.0) Gecko/20100101 Firefox/95.0

Steps to reproduce:

I have no idea if this is a problem. I'm running openSUSE Tumbleweed with the proprietary Nvidia 470.74 drivers, however when I start nightly in a console get the message displayed below.

Actual results:

The message

MESA-LOADER: failed to open nouveau: /usr/lib64/dri/nouveau_dri.so: cannot open shared object file: No such file or directory (search paths /usr/lib64/dri, suffix _dri) failed to load driver: nouveau ATTENTION: default value of option mesa_glthread overridden by environment.

Is diaplayed

Expected results:

Why is it looking for nouveau

I am unable to reproduce this on Firefox nightly 95 but i have ubuntu 20 64bit.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Whiteboard: QA-not-reproducible

Thanks for the report! Please open about:support, click on "Copy text to clipboard" and paste it here.

(In reply to Darkspirit from comment #2)

Thanks for the report! Please open about:support, click on "Copy text to clipboard" and paste it here.

As requested - https://pastebin.com/TLVEA3ze

I assume the warning could be prevented by not trying to initialize Gbm/Dmabuf on proprietary Nvidia driver below 495.

OS: Unspecified → Linux
Hardware: Unspecified → x86_64
See Also: → 1737428
Summary: MESA-LOADER: failed to open nouveau (Nightly) → EGL/X11/Nvidia 470.74: "MESA-LOADER: failed to open nouveau" (likely a Gbm/Dmabuf warning because it's not driver 495)

Why is it looking for nouveau

Good question - but what's certain is that this is not our fault or job to fix :)

For whatever reason MESA-LOADER is involved, this is because something is messed up with your GL setup. Firefox does not ask for specific GL drivers - it just takes whatever the system gives it. To me it smells like a bug in libglvnd, maybe similar to bug 1731480.

Thus closing as there's nothing actionable from our side.

P.S.: you may want to check if other EGL applications such as glmark2-es2 show the same warning - I'd assume they do.

Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → INVALID

No, IIUC, this is not a bug.
Unless the proprietary Nvidia driver is registered as Gbm backend, Gbm tries to use Nouveau and fails as expected.
loader_get_driver_for_fd (?)
I left this bug open in case there is a desire to add a DMABUF blacklist rule for <495 to prevent the warning.

Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: INVALID → ---

It causes unnecessary error messages - and we do have the blocklist
already, so make use of it.

Assignee: nobody → robert.mader

Well, I'd still see it as a bug in other components and I'd hope that it gets fixed by an updated loader eventually, but you're right that we could blocklist GBM/DMABUF initialization on older Nvidia drivers.

Pulse (or anybody else), could you give https://treeherder.mozilla.org/jobs?repo=try&revision=47718d60a34e6c26cbfd35cf9f399e03f8bd8d2c a try? You can download the build via Linux x64 opt -> B -> Artifacts ... -> target.tar.bz2

A quick confirmation that the patch silences the warning would be great. Thanks!

Flags: needinfo?(ausaitis)
Pushed by robert.mader@posteo.de: https://hg.mozilla.org/integration/autoland/rev/5e304037382d Do not try to initialize GBM on Nvidia < 495, r=gfx-reviewers,jgilbert
Status: REOPENED → RESOLVED
Closed: 4 years ago4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch

Pulse: would be great if you could give the upcoming nightly a try and confirm the message is gone. Thanks :)

(In reply to Robert Mader [:rmader] (back on ~23. Nov) from comment #11)

Pulse: would be great if you could give the upcoming nightly a try and confirm the message is gone. Thanks :)

On build 20211103213618 the error no longer appears.

Thank you

Flags: needinfo?(ausaitis)

I am getting this error from Firefox 94.0 on Fedora. firefox-94.0-1.fc34.x86_64

I'm running X11 not wayland because in wayland the clipboard doesn't work between firefox and the command prompt......

I installed and ran glmark2-es2 and did not get the error. I'm reporting this because it seemingly contradicts @rmader's hypothesis that other gl apps might report the same error.

(In reply to p9j43 from comment #13)
Please open about:support, click on "Copy text to clipboard" and paste it here. Thanks!

Attached file about:support

(In reply to p9j43 from comment #15)
Are you sure you get the exact phrase "MESA-LOADER: failed to open nouveau"?
Do you have an Nvidia graphics card that is not displayed on about:support?
Do you have the proprietary Nvidia driver installed?

Oh no. The message I get is ATTENTION: default value of option mesa_glthread overridden by environment.

I found this bug searching for that string which google found in the ticket body and my eyes gravitated to. But i suspect now that "ATTENTION: default value of option mesa_glthread overridden by environment." is secondary to what the OP was reporting. Sorry for having added noise to the signal here.

(In reply to p9j43 from comment #17)

Oh no. The message I get is ATTENTION: default value of option mesa_glthread overridden by environment.

Firefox forcibly disables the mesa_glthread env var for itself so that users can't accidentally enable it because otherwise they would get a crash (bug 1670545). The message comes from Mesa. In theory it could be suppressed with MESA_DEBUG=silent env var, but it might not be desirable.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: