Bug 1736761 - Do not try to initialize GBM on Nvidia < 495, r=gfx-reviewers,jgilbert

It causes unnecessary error messages - and we do have the blocklist
already, so make use of it.

Differential Revision: https://phabricator.services.mozilla.com/D130133